# cardtale

./: .gitignore  .pylintrc  README.md  cardtale.drawio  pyproject.toml
assets/: cardtale.drawio
cardtale/analytics/testing/: base.py
cardtale/analytics/tsa/: acf.py  change.py  decomposition.py  distributions.py  rbf.py  summary.py  tde.py  time_model.py
cardtale/cards/: builder.py  config.py  strings.py
cardtale/cards/analyser/: base.py  change.py  seasonality.py  structural.py  trend.py  variance.py
cardtale/cards/cardset/: base.py  change.py  seasonality.py  structural.py  trend.py  variance.py
cardtale/cards/parsers/: seasonality.py  trend.py  variance.py
cardtale/core/: data.py  profile.py  time.py
cardtale/core/config/: analysis.py  freq.py  typing.py
cardtale/core/utils/: mase.py  splits.py
cardtale/data/: time_features.py  uvts.py
cardtale/data/config/: analysis.py  frequency.py  landmarks.py  methods.py
cardtale/data/utils/: errors.py  splits.py
cardtale/visuals/: config.py  plot.py
cardtale/visuals/base/: boxplot.py  density.py  histogram.py  line_plots.py  lollipop.py  scatterplot.py  seasonal.py  summary.py  violin_partial.py
cardtale/visuals/plots/: change_dist.py  change_effect.py  change_marking.py  seas_line.py  seas_meta.py  seas_subseries.py  seas_summary.py  struc_acf.py  struc_components.py  struc_dist.py  struc_line.py  struc_nszones.py  struc_pacf.py  trend_dist.py  trend_line.py  var_dist.py
examples/: example.py
notebooks/: basic_example.ipynb  example.py
scripts/: example.py
test_utils/: artificial_series.py
(+40 files in other folders)
