[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]

name = "cardtale"
version = "0.1.4"
authors = [
    {name = "Vitor Cerqueira", email = "cerqueira.vitormanuel@gmail.com" },
]
keywords = [
    "Model Cards",
    "Data Cards",
    "Data Science",
    "Machine Learning",
    "Time Series",
    "Forecasting"
]
description = "Data, Model, and Algorithm Cards for Time Series"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "arch==7.1.0",
    "pandas==2.2.3",
    "lightgbm==4.5.0",
    "neuralforecast==3.0.0",
    "mlforecast==0.13.4",
    "statsforecast==1.7.8",
    "datasetsforecast==0.0.8",
    "numerize==0.12",
    "plotnine==0.14.5",
    "statsmodels==0.14.4",
    "jinja2==3.1.4",
    "ruptures==1.1.9",
    "weasyprint==62.3"
]

[project.urls]
"Homepage" = "https://github.com/vcerqueira/cardtale"
"Bug Tracker" = "https://github.com/vcerqueira/cardtale/issues"

[tool.hatch.build.targets.wheel]
packages = ["cardtale"]